--- a/treatment.html
+++ b/treatment.html
@@ -3,10 +3,11 @@
   <head>
     <meta charset="utf-8">
     <title>Newlife Lifestyle Aesthetic Clinic</title>
-    <link rel="stylesheet" href="/css/newlifestyle.min.css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,500,600" rel="stylesheet">
-    <script src="jquery-3.2.0.min.js" ></script>
-    <script type="text/javascript" src="animate.js"></script>
+    <link rel="icon" type="image/png" href="/img/newlife-favicon.png">
+    <script src="./js/jquery.js" ></script>
+    <script  src="./js/animate.js" type="text/javascript"></script>
+    <link rel="stylesheet" href="/css/newlifestyle.min.css" type="text/css">
   </head>
   <body>
     <span id="logo">  <img src="/img/newlife-logo.png" alt=""></span>
@@ -25,6 +26,29 @@
           <li><a href="contact.html">contact</a></li>
         </ul>
       </nav>
+    </div>
+    <div class="mobile-menu">
+      <span class="menu-bar-mobile">
+        <h4>Menu</h4><img src="/img/lifestyle-menu.png" alt="" width="40px" height="40px">
+      </span>
+      <nav>
+        <ul>
+          <span class="closebtn"><button type="button" name="button">&times;</button></span>
+          <li><a href="index.html">home</a></li>
+          <li><a href="about.html">about</a></li>
+          <li><a href="treatment.html">treatment</a></li>
+          <li><a href="newsandmedia.html">news & media</a></li>
+          <li><a href="contact.html">contact</a></li>
+        </ul>
+      </nav>
+    </div>
+    <div class="contact-links">
+      <ul>
+        <li><a href="tel:0322422822"><img src="./img/phoneicon1.png" alt="" width="42px" height="42px"></a></li>
+        <li><a href="https://api.whatsapp.com/send?phone=60176960238&text=Hello,%20I%20would%20to%20make%20an%20appointment%20with%20your%20doctor." target="_blank"><img src="./img/whatsappicon.png" alt="" width="42px" height="42px"></a></li>
+        <li><a href="https://waze.com/ul?ll=3.1101032,101.6614844" target="_blank"><img src="./img/waze-icon.png" alt="" width="42px" height="42px"></a></li>
+        <li><a href="mailto:lifecarelifestyle@yahoo.com"><img src="./img/emailicon.png" alt="" width="42px" height="42px"></a></li>
+      </ul>
     </div>
     <div class="solutions">
       <div class="aesthetic-med">
@@ -81,9 +105,6 @@
         <p>Non-invasive treatment of cellulite; inducing collagen remodelling and shrinkage for firmer looking skin. </p>
     </div>
   </body>
-  <div class="foot-booking">
-    <h4>Book a consultation </h4> <img src="./img/phoneicon.png" alt="" width="18px" height="18px"> <a href="tel:0322422822">03 2242 2822</a> <h4>Getting here </h4> <a href="https://waze.com/ul?ll=3.1101032,101.6614844" target="_blank"> <img src="./img/waze-icon.png" alt="" width="20px" height="20px"> </a>
-  </div>
   <footer>
       <p>&copy; All Rights Reserved. Newlife Lifestyle Aesthetic Clinic</p>
   </footer>
