--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script src="./js/jquery.js" ></script>
     <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script> -->
     <script  src="./js/animate.js" type="text/javascript"></script>
-    <link rel="stylesheet" href="/css/newlifestyle.min.css" type="text/css">
+    <link rel="stylesheet" href="./css/newlifestyle.min.css" type="text/css">
   </head>
   <body>
     <span id="logo">  <img src="/img/newlife-logo.png" alt=""></span>
