--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@
     <link rel="icon" type="image/png" href="/img/newlife-favicon.png">
     <script src="./js/jquery.js" ></script>
     <script  src="./js/animate.js" type="text/javascript"></script>
-    <link rel="stylesheet" href="/css/newlifestyle.min.css" type="text/css">
+    <link rel="stylesheet" href="./css/newlifestyle.min.css" type="text/css">
   </head>
   <body>
     <span id="logo">  <img src="/img/newlife-logo.png" alt=""></span>
