--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <meta charset="utf-8">
     <title>Newlife Lifestyle Aesthetic Clinic</title>
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,500,600" rel="stylesheet">
-    <link rel="icon" type="image/png" href="/img/newlife-favicon.png">
+    <link rel="icon" type="image/png" href="./img/newlife-favicon.png">
     <script src="./js/jquery.js" ></script>
     <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script> -->
     <script  src="./js/animate.js" type="text/javascript"></script>
     <link rel="stylesheet" href="./css/newlifestyle.min.css" type="text/css">
   </head>
   <body>
-    <span id="logo">  <img src="/img/newlife-logo.png" alt=""></span>
+    <span id="logo">  <img src="./img/newlife-logo.png" alt=""></span>
 
     <div class="menu-bar">
       <nav>
