--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </div>
     <div class="mobile-menu">
       <span class="menu-bar-mobile">
-        <h4>Menu</h4><img src="/img/lifestyle-menu.png" alt="" width="40px" height="40px">
+        <h4>Menu</h4><img src="./img/lifestyle-menu.png" alt="" width="40px" height="40px">
       </span>
       <nav>
         <ul>
