--- a/about.html
+++ b/about.html
@@ -4,17 +4,17 @@
     <meta charset="utf-8">
     <title>Newlife Lifestyle Aesthetic Clinic</title>
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,500,600" rel="stylesheet">
-    <link rel="icon" type="image/png" href="/img/newlife-favicon.png">
+    <link rel="icon" type="image/png" href="./img/newlife-favicon.png">
     <script src="./js/jquery.js" ></script>
     <script  src="./js/animate.js" type="text/javascript"></script>
     <link rel="stylesheet" href="./css/newlifestyle.min.css" type="text/css">
   </head>
   <body>
-    <span id="logo">  <img src="/img/newlife-logo.png" alt=""></span>
+    <span id="logo">  <img src="./img/newlife-logo.png" alt=""></span>
 
     <div class="menu-bar">
       <span class="menu-bar-mobile">
-        <h4>Menu</h4><img src="/img/lifestyle-menu.png" alt="" width="40px" height="40px">
+        <h4>Menu</h4><img src="./img/lifestyle-menu.png" alt="" width="40px" height="40px">
       </span>
 
       <nav>
