--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,500,600" rel="stylesheet">
     <link rel="icon" type="image/png" href="/img/newlife-favicon.png">
     <script src="./js/jquery.js" ></script>
-    <script  src="./js/animate.js" type="text/javascript"></script>
+    <script  src="./js/min.animate.js" type="text/javascript"></script>
     <link rel="stylesheet" href="/css/newlifestyle.min.css" type="text/css">
     <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-113543330-1"></script>
