--- a/treatment.html
+++ b/treatment.html
@@ -20,7 +20,7 @@
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,500,600" rel="stylesheet">
     <link rel="icon" type="image/png" href="/img/newlife-favicon.png">
     <script src="./js/jquery.js" ></script>
-    <script  src="./js/min.animate.js" type="text/javascript"></script>
+    <script  src="./js/animate.js" type="text/javascript"></script>
     <link rel="stylesheet" href="/css/newlifestyle.min.css" type="text/css">
     <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-113543330-1"></script>
@@ -110,6 +110,7 @@
       <h2>Our Treatments</h2>
     </div>
     <div class="treatment-types">
+      <img src="./img/treatment-4.jpg" alt="">
         <h3>Laser</h3>
         <p>Laser treatment is a precise, predictable and safe procedure. We use advanced laser technology for skin rejuvenation, to reduce wrinkles, minimise pore size, remove uneven pigmentation, age spots, warts, moles, cysts and spider vein. It is also used for permanent hair reduction and for tattoo removal.
           <br><br>a) Acne treatment <br>b) Photo Rejuvenation : light treatment to revitalize skin.
@@ -131,6 +132,10 @@
         <p>Procedure is designed to soften fine wrinkles, smooth scarring and rejuvenate skin by removing the top most layer of dead skin and promoting unblemished skin growth.</p>
         <h3>Radio Frequency</h3>
         <p>Non-invasive treatment of cellulite; inducing collagen remodelling and shrinkage for firmer looking skin. </p>
+        <h3>High Intensity Focused Ultrasound (HIFU)</h3>
+        <p>HIFU devices are used to induce subcutaneous tissue contraction for Non Invasive Facelift and to treat subcutaneous adipose tissue for the purposes of Body Contouring. It is also used with lower energy levels, for eyebrow lifts. </p>
+        <h3>Oxygen Facial</h3>
+        <p>The use of oxygen facial will help rejuvenate the skin, showing off healthier skin. <br>Pressurised oxygen is delivered to the face and skin cells are replenished. <br>Since oxygen is a bactericide that is all natural, the use of oxygen on the skin will cool and calm it, as well as destroy anaerobic bacteria. </p>
       <div class="other-treatments">
         <h3>Other Treatments</h3>
         <ul>
