--- a/contact.html
+++ b/contact.html
@@ -89,7 +89,8 @@
       </div>
 
       <div class="newlife-lifestyle-map">
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3983.9418126094106!2d101.66148441475725!3d3.1100977977353024!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x31cc4a2afdbe0b45%3A0xf54d1b8ba0c89e61!2sWisma+Life+Care!5e0!3m2!1sen!2smy!4v1515664044664" width="100%" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
+        <span id="floor-tag">We are on 3rd floor.</span>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3983.9418126094106!2d101.66148441475725!3d3.1100977977353024!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x31cc4a2afdbe0b45%3A0xf54d1b8ba0c89e61!2sWisma+Life+Care!5e0!3m2!1sen!2smy!4v1515664044664" width="100%" height="300" position="center" frameborder="0" style="border:0" allowfullscreen></iframe>
       </div>
       <div class="kota-kemuning-branch">
         <h4>Other branch</h4>
