--- a/contact.html
+++ b/contact.html
@@ -10,10 +10,10 @@
     <meta property="og:site_name" content="Newlife Lifestyle Aesthetic Clinic Bangsar">
     <meta property="og:description" content="Newlife Lifestyle Aesthetic Clinic in Bangsar South. We provide a wide range of cosmetic treatments by experienced and professional doctors. ">
     <meta property="og:image" content="./img/newlife-lifestyle-clinic-pic1.jpg">
-    <meta name="copyright" content="Zenia Design">
-    <meta name="author" content="Zenia Design">
-    <meta name="web_author" content="Zenia Design">
-    <meta name="contact" content="zeniadesign@hotmail.com">
+    <meta name="copyright" content="http://zeniadesign.com">
+    <meta name="author" content="http://zeniadesign.com">
+    <meta name="web_author" content="http://zeniadesign.com">
+    <meta name="contact" content="http://zeniadesign.com">
     <meta name="reply-to" content="zeniadesign@hotmail.com">
     <meta name="rating" content="general">
     <meta name="abstract" content="Aesthetic clinic offers non-surgical cosmetic treatments in Bangsar, Kuala Lumpur.">
@@ -78,10 +78,10 @@
       <div class="get-in-touch">
         <div class="contact-info">
           <p> <span id="bold">Get In Touch</span><br>
-          <br>Newlife Lifestyle Aesthetic Clinic,<br> Wisma Lifecare, Level 3,<br> No. 5, Jalan Kerinchi, <br>Bangsar South, 59200 Kuala Lumpur.
+          <br>Newlife Lifestyle Aesthetic Clinic,<br><a href="http://www.lifecarediagnostic.com/">Lifecare Medical Centre</a>, Level 3,<br> No. 5, Jalan Kerinchi, <br>Bangsar South, 59200 Kuala Lumpur.
           <br><br>Call us at <a href="tel:0322422822">03 2242 2822</a> or <a href="tel:0176960238">017 696 0238</a><br><br>Opening Hours: Mon-Sat: 9am-6pm , Sun: 9am-2pm
         </br></p>
-          <img src="./img/wismalifecare.png" alt="" height="400px">
+          <img src="./img/newlife-lifestyle-clinic-pic1.jpg" alt="" height="400px">
 
         </div>
         <div class="newlife-lifestyle-location">
@@ -89,19 +89,19 @@
       </div>
 
       <div class="newlife-lifestyle-map">
-        <span id="floor-tag">We are on 3rd floor.</span>
+        <span id="floor-tag">We are on the 3rd floor.</span>
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3983.9418126094106!2d101.66148441475725!3d3.1100977977353024!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x31cc4a2afdbe0b45%3A0xf54d1b8ba0c89e61!2sWisma+Life+Care!5e0!3m2!1sen!2smy!4v1515664044664" width="100%" height="300" position="center" frameborder="0" style="border:0" allowfullscreen></iframe>
       </div>
       <div class="kota-kemuning-branch">
         <h4>Other branch</h4>
         <h4>New Lifestyle Kota Kemuning</h4><br>
-        <p>18-G, Jalan Anggerik Vanilla R31/R, Kota Kemuning, Shah Alam, Selangor<br><br>Contact No.: <a href="tel:0380701270">03 8070 1270</a>  <a href="tel:0162387313">016 238 7313</a><br><br>Opening Hours: Tue-Fri: 11am-8pm , Sat-Sun: 10am-6pm
+        <p>18-G, Jalan Anggerik Vanilla R31/R, Kota Kemuning, Shah Alam, Selangor<br><br>Contact No.: <a href="tel:0162387313">016 238 7313</a><br><br>Opening Hours: Tue-Fri: 11am-8pm , Sat-Sun: 10am-6pm
 
       </div>
     </div>
 
     <footer>
-        <p><a href="http://www.zeniadesign.com" target="_blank">&copy; </a>All Rights Reserved. Newlife Lifestyle Aesthetic Clinic</p>
+        <p><a href="http://www.zeniadesign.com" target="_blank">&copy; All Rights Reserved.</a> Newlife Lifestyle Aesthetic Clinic</p>
     </footer>
 
   </body>
