--- a/newsandmedia.html
+++ b/newsandmedia.html
@@ -10,10 +10,10 @@
     <meta property="og:site_name" content="Newlife Lifestyle Aesthetic Clinic Bangsar">
     <meta property="og:description" content="Newlife Lifestyle Aesthetic Clinic in Bangsar South. We provide a wide range of cosmetic treatments by experienced and professional doctors. ">
     <meta property="og:image" content="./img/newlife-lifestyle-clinic-pic1.jpg">
-    <meta name="copyright" content="Zenia Design">
-    <meta name="author" content="Zenia Design">
-    <meta name="web_author" content="Zenia Design">
-    <meta name="contact" content="zeniadesign@hotmail.com">
+    <meta name="copyright" content="http://zeniadesign.com">
+    <meta name="author" content="http://zeniadesign.com">
+    <meta name="web_author" content="http://zeniadesign.com">
+    <meta name="contact" content="http://zeniadesign.com">
     <meta name="reply-to" content="zeniadesign@hotmail.com">
     <meta name="rating" content="general">
     <meta name="abstract" content="Aesthetic clinic offers non-surgical cosmetic treatments in Bangsar, Kuala Lumpur.">
