--- a/about.html
+++ b/about.html
@@ -10,10 +10,10 @@
     <meta property="og:site_name" content="Newlife Lifestyle Aesthetic Clinic Bangsar">
     <meta property="og:description" content="Newlife Lifestyle Aesthetic Clinic in Bangsar South. We provide a wide range of cosmetic treatments by experienced and professional doctors. ">
     <meta property="og:image" content="./img/newlife-lifestyle-clinic-pic1.jpg">
-    <meta name="copyright" content="Zenia Design">
-    <meta name="author" content="Zenia Design">
-    <meta name="web_author" content="Zenia Design">
-    <meta name="contact" content="zeniadesign@hotmail.com">
+    <meta name="copyright" content="http://zeniadesign.com">
+    <meta name="author" content="http://zeniadesign.com">
+    <meta name="web_author" content="http://zeniadesign.com">
+    <meta name="contact" content="http://zeniadesign.com">
     <meta name="reply-to" content="zeniadesign@hotmail.com">
     <meta name="rating" content="general">
     <meta name="abstract" content="Aesthetic clinic offers non-surgical cosmetic treatments in Bangsar, Kuala Lumpur.">
@@ -138,7 +138,7 @@
     </div>
     </section>
     <footer>
-        <p><a href="http://www.zeniadesign.com" target="_blank">&copy; </a>All Rights Reserved. Newlife Lifestyle Aesthetic Clinic</p>
+        <p><a href="http://www.zeniadesign.com" target="_blank">&copy; All Rights Reserved.</a> Newlife Lifestyle Aesthetic Clinic</p>
     </footer>
   </body>
 
