--- a/treatment.html
+++ b/treatment.html
@@ -10,10 +10,10 @@
     <meta property="og:site_name" content="Newlife Lifestyle Aesthetic Clinic Bangsar">
     <meta property="og:description" content="Newlife Lifestyle Aesthetic Clinic in Bangsar South. We provide a wide range of cosmetic treatments by experienced and professional doctors. ">
     <meta property="og:image" content="./img/newlife-lifestyle-clinic-pic1.jpg">
-    <meta name="copyright" content="Zenia Design">
-    <meta name="author" content="Zenia Design">
-    <meta name="web_author" content="Zenia Design">
-    <meta name="contact" content="zeniadesign@hotmail.com">
+    <meta name="copyright" content="http://zeniadesign.com">
+    <meta name="author" content="http://zeniadesign.com">
+    <meta name="web_author" content="http://zeniadesign.com">
+    <meta name="contact" content="http://zeniadesign.com">
     <meta name="reply-to" content="zeniadesign@hotmail.com">
     <meta name="rating" content="general">
     <meta name="abstract" content="Aesthetic clinic offers non-surgical cosmetic treatments in Bangsar, Kuala Lumpur.">
@@ -77,6 +77,7 @@
     <div class="section-title">
       <h2>Our Clinical Solutions</h2>
     </div>
+    <img src="./img/treatment-poster.jpg" alt="" width="100%">
     <div class="solutions">
       <div class="aesthetic-med">
         <img src="./img/laser.svg" alt="">
@@ -110,7 +111,6 @@
       <h2>Our Treatments</h2>
     </div>
     <div class="treatment-types">
-      <img src="./img/treatment-4.jpg" alt="">
         <h3>Laser</h3>
         <p>Laser treatment is a precise, predictable and safe procedure. We use advanced laser technology for skin rejuvenation, to reduce wrinkles, minimise pore size, remove uneven pigmentation, age spots, warts, moles, cysts and spider vein. It is also used for permanent hair reduction and for tattoo removal.
           <br><br>a) Acne treatment <br>b) Photo Rejuvenation : light treatment to revitalize skin.
@@ -157,7 +157,7 @@
     </div>
   </body>
   <footer>
-      <p><a href="http://www.zeniadesign.com" target="_blank">&copy; </a>All Rights Reserved. Newlife Lifestyle Aesthetic Clinic</p>
+      <p><a href="http://www.zeniadesign.com" target="_blank">&copy; All Rights Reserved.</a> Newlife Lifestyle Aesthetic Clinic</p>
   </footer>
 
 </html>
