--- a/newsandmedia.html
+++ b/newsandmedia.html
@@ -88,7 +88,7 @@
       <img src="./img/news-2014.jpg" alt="">
     </div>
     <footer>
-        <p><a href="http://www.zeniadesign.com" target="_blank">&copy; </a>All Rights Reserved. Newlife Lifestyle Aesthetic Clinic</p>
+      <p><a href="http://www.zeniadesign.com" target="_blank">&copy; All Rights Reserved.</a> Newlife Lifestyle Aesthetic Clinic</p>
     </footer>
     </body>
 </html>
