--- a/about.html
+++ b/about.html
@@ -138,7 +138,7 @@
     </div>
     </section>
     <footer>
-        <p><a href="http://www.zeniadesign.com" target="_blank">&copy; All Rights Reserved.</a> Newlife Lifestyle Aesthetic Clinic</p>
+        <p><a href="http://www.zeniadesign.com" target="_blank">&copy; All Rights Reserved.</a>Dynamic Rejuvenation Clinic Sdn. Bhd. (982896-V)</p>
     </footer>
   </body>
 
