--- a/treatment.html
+++ b/treatment.html
@@ -157,7 +157,7 @@
     </div>
   </body>
   <footer>
-      <p><a href="http://www.zeniadesign.com" target="_blank">&copy; All Rights Reserved.</a> Newlife Lifestyle Aesthetic Clinic</p>
+      <p><a href="http://www.zeniadesign.com" target="_blank">&copy; All Rights Reserved.</a> Dynamic Rejuvenation Clinic Sdn. Bhd. (982896-V)</p>
   </footer>
 
 </html>
