--- a/contact.html
+++ b/contact.html
@@ -101,7 +101,7 @@
     </div>
 
     <footer>
-        <p><a href="http://www.zeniadesign.com" target="_blank">&copy; All Rights Reserved.</a> Newlife Lifestyle Aesthetic Clinic</p>
+        <p><a href="http://www.zeniadesign.com" target="_blank">&copy; All Rights Reserved.</a> Dynamic Rejuvenation Clinic Sdn. Bhd. (982896-V)</p>
     </footer>
 
   </body>
